fix sticky hover on mobile devices

--- a/main.css
+++ b/main.css
@@ -23,9 +23,11 @@ body {
     text-align: center;
 }
 
-.card-footer-item:hover {
-    color: hsl(0, 0%, 80%);
-    background-color: hsl(0, 0%, 19%);
+@media(hover: hover) {
+    .card-footer-item:hover {
+        color: hsl(0, 0%, 80%);
+        background-color: hsl(0, 0%, 18%);
+    }
 }
 
 .card-footer-item.disabled {
